# django-study

./: main.py  pyproject.toml
config/: settings.py
studydjango/main/: models.py  urls.py  views.py
studydjango/main/migrations/: 0001_initial.py
studydjango/main/templates/main/: index.html  map.html  roominfo.html
studydjango/studydjango/: asgi.py  settings.py  urls.py  wsgi.py
